Add missing key

--- a/app/views/bikes/edit_publicize.html.haml
+++ b/app/views/bikes/edit_publicize.html.haml
@@ -32,7 +32,7 @@
               .share-social.share-facebook= t(".share_on_facebook")
 
           .no-divider-row.full-width-button.btn-share
-            - tweet_text = "Help me find my stolen bike!"
+            - tweet_text = t(".help_me_find_bike")
             %a.twitter-share-button{href: "https://twitter.com/share?ref_src=twsrc%5Etfw",
                                     "data-text" => tweet_text,
                                     "data-hashtags" => "bikeindex",
