--- a/app/views/bikes/bike_fields/_revised_colors.html.haml
+++ b/app/views/bikes/bike_fields/_revised_colors.html.haml
@@ -1,7 +1,6 @@
 - classname ||= ''
 - bike ||= @bike
 
-- primary_color_help_content = t(".primary_color_help_content_html")
 - display_secondary_color = bike.secondary_frame_color_id.present?
 - display_tertiary_color = bike.tertiary_frame_color_id.present?
 
@@ -11,7 +10,7 @@
 
     .form-well-input.fancy-select.unfancy
       = f.collection_select(:primary_frame_color_id, Color.all, :id, :name, required: true, prompt: t(".choose_color") )
-      %a.inline-input-help{ title: t(".color_help"), data: { toggle: 'popover', content: primary_color_help_content } }
+      %a.inline-input-help{ title: t(".color_help"), data: { toggle: 'popover', content: t(".primary_color_help_content_html") } }
         ?
     .right-input-help
       %a#add-secondary.optional-form-block{ class: ('currently-hidden' if display_secondary_color), data: { target: '#secondary-color', toggle: '#rm-secondary' } }
