Comment out comments

--- a/app/views/bikes/edit_alert.html.haml
+++ b/app/views/bikes/edit_alert.html.haml
@@ -8,7 +8,7 @@
 
         .form-wrap{ class: @theft_alerts.present? ? "secondary-form-wrap" : "" }
           .form-well-form-header-always-visible
-            / Activate Bike Index Alert
+            -# Activate Bike Index Alert
             %h3.text-center.w-100
               = @edit_templates[@edit_template]
           .row
