Use USD for pricing plans

--- a/app/views/bikes/edit_alert_purchase.html.haml
+++ b/app/views/bikes/edit_alert_purchase.html.haml
@@ -38,7 +38,7 @@
               .copy.text-center
                 %strong
                   - price = @selected_theft_alert_plan.amount_cents
-                  = t(".charge", price: number_to_currency(price / 100.0))
+                  = t(".charge", price: number_to_currency(price / 100.0), unit: "$", separator: ".")
             .row
               .text-center.w-100.mt-2
                 %button.btn.btn-lg.btn-primary#js-confirm-plan-button
