--- a/app/views/bikes/_theft_alerts_table.html.haml
+++ b/app/views/bikes/_theft_alerts_table.html.haml
@@ -4,18 +4,17 @@
   .form-wrap{ class: first_form_well ? "" : "secondary-form-wrap" }
     .form-well-form-header-always-visible
       %h3
-        Existing Theft Alerts
+        = t(".existing_theft_alerts")
     .row
       .col-sm-12
         %table.table.table-bordered{ style: "background: #fff;" }
           %thead.small-header
             %tr
-              %th Created
-              %th Plan
-              %th Status
-              %th Start
-              %th End
-              / %th Post
+              %th= t(".created")
+              %th= t(".plan")
+              %th= t(".status")
+              %th= t(".start")
+              %th= t(".end")
 
           %tbody
             - theft_alerts.each do |alert|
@@ -25,4 +24,3 @@
                 %td= alert.status
                 %td.convertTime= l(alert.begin_at, format: :convert_time) if alert.begin_at.present?
                 %td.convertTime= l(alert.end_at, format: :convert_time) if alert.end_at.present?
-                / # %td= link_to "link", alert.facebook_post_url, target: "_blank" if alert.facebook_post_url.present?
