--- a/app/views/bikes/edit_alert.html.haml
+++ b/app/views/bikes/edit_alert.html.haml
@@ -1,32 +1,32 @@
 .primary-edit-bike-form
   .form-well-container.container{ class: "edit-bike-page-#{@edit_template}" }
     .row
-      = render partial: "/bikes/edit_primary_menu", locals: { is_disabled: true }
-      .col-md-8.form-well
+      = render partial: "bikes/edit_primary_menu", locals: { is_disabled: true }
 
+      .col-md-8.form-well
         = render partial: "theft_alerts_table", locals: { theft_alerts: @theft_alerts, first_form_well: true }
 
         .form-wrap{ class: @theft_alerts.present? ? "secondary-form-wrap" : "" }
           .form-well-form-header-always-visible
-            / Activate Bike Index Alert
+            -# Activate Bike Index Alert
             %h3.text-center.w-100
               = @edit_templates[@edit_template]
           .row
             .col-sm-12
-              %p
-                We've found targeted sharing on social media to have a <em>huge</em> effect on recovering stolen bikes.
-              %p
-                Bike Index can help by purchasing targeted ads on Facebook to spread the word about your stolen #{@bike.type}.
+              %p= t(".targeted_sharing_html")
+              %p= t(".bike_index_can_help", bike_type: @bike.type)
 
           = form_tag edit_bike_url(@bike), method: :get, id: "js-select-plan-form" do
             = hidden_field_tag :page, :alert_purchase
             = hidden_field_tag :selected_plan_id
+            = hidden_field_tag :locale, params[:locale] if params[:locale].presence
             .row
-              %h3.text-center.w-100 Select Plan
+              %h3.text-center.w-100
+                = t(".select_plan")
             .row
-              = render @theft_alert_plans,
-                selected_plan: @selected_theft_alert_plan,
-                preferred_plan: @theft_alert_plans.max_by(&:amount_cents)
+              = render @theft_alert_plans, selected_plan: @selected_theft_alert_plan, preferred_plan: @theft_alert_plans.max_by(&:amount_cents)
+
             .row
               .text-center.w-100.mt-2
-                %button.btn.btn-lg.btn-primary Select Plan
+                %button.btn.btn-lg.btn-primary
+                  = t(".select_plan")
