--- a/app/views/bikes/edit_alert_purchase.html.haml
+++ b/app/views/bikes/edit_alert_purchase.html.haml
@@ -1,14 +1,14 @@
 .primary-edit-bike-form
   .form-well-container.container{ class: "edit-bike-page-alert" }
     .row
-      = render partial: "/bikes/edit_primary_menu", locals: { is_disabled: true }
+      = render partial: "bikes/edit_primary_menu", locals: { is_disabled: true }
 
       .col-md-8.form-well
         .form-wrap
           .form-well-form-header
             %h3.text-center.w-100
-              / 'alert'-prefixed templates should all have the same header and
-              / highlight the same nav menu item
+              -# 'alert'-prefixed templates should all have the same header and
+              -# highlight the same nav menu item
               = @edit_templates.select { |k, v| @edit_template.match(/#{k}/) }.values.first
 
           = form_tag theft_alerts_path,
@@ -24,14 +24,13 @@
 
             .row
               %h3.text-center.w-100
-                Confirm your plan
+                = t(".confirm_your_plan")
               .copy.text-center
-                You've made an excellent choice! Please confirm it below.
+                = t(".youve_made_an_excellent_choice")
             .row
               .copy.text-center
                 %strong
-                  Here is what you'll get with the
-                  #{@selected_theft_alert_plan.name} plan:
+                  = t(".here_is_what_youll_get", plan_name: @selected_theft_alert_plan.name)
             .row
               .description
                 = @selected_theft_alert_plan.description_html.html_safe
@@ -39,16 +38,17 @@
               .copy.text-center
                 %strong
                   - price = @selected_theft_alert_plan.amount_cents
-                  Charge: #{number_to_currency(price / 100.0, unit: "$")}
+                  = t(".charge", price: number_to_currency(price / 100.0), unit: "$", separator: ".")
             .row
               .text-center.w-100.mt-2
                 %button.btn.btn-lg.btn-primary#js-confirm-plan-button
-                  &check; Confirm
+                  &check;
+                  = t(".confirm")
 
                 = link_to edit_bike_path(@bike, page: :alert), method: :get do
                   %button.btn.btn-lg.btn-secondary
                     %span.times &times;
-                    Cancel
+                    = t(".cancel")
 
         = render partial: "theft_alerts_table", locals: { theft_alerts: @theft_alerts }
 
