--- a/app/views/bikes/new.html.haml
+++ b/app/views/bikes/new.html.haml
@@ -1,8 +1,9 @@
-- serial_help_content = "Every bike has a unique serial number, it's how they are identified. To learn more or see some examples, go to #{link_to 'our serial page', serials_url, target: '_blank' } <small>(opens in a separate window)</small>."
+- serial_page_link = link_to(t(".our_serial_page"), serials_url, target: '_blank')
+- serial_help_content = t(".serial_help_content_html", serial_page_link: serial_page_link)
 
 .form-well-header.container
-  %h1
-    Enter #{@bike.type} details
+  %h1= t(".enter_bike_type_details", bike_type: @bike.type)
+
 = form_for @bike, multipart: true do |f|
   = f.hidden_field :b_param_id_token, value: @b_param&.id_token
   - if @organization.present?
@@ -13,12 +14,13 @@
 
   - if @bike.recovered
     = f.hidden_field :recovered, value: true
+
   .form-well-container.container
     .row
       .col-lg-8.offset-lg-2.form-well
         .form-wrap
           .form-group.row.unnested-field
-            = f.label :cycle_type, 'This is a', class: 'form-well-label'
+            = f.label :cycle_type, t(".this_is_a"), class: 'form-well-label'
             .form-well-input.fancy-select.unfancy
               = select(:bike, :cycle_type, CycleType.select_options, { required: true, class: 'form-control'})
 
@@ -26,44 +28,46 @@
             = f.label :serial_number, class: 'form-well-label'
             .form-well-input
               #serial-input
-                = f.text_field :serial_number, required: true, autocomplete: 'off', autocorrect: 'off', autocapitalize: 'off', placeholder: 'highly recommended', class: 'form-control'
-                %a.inline-input-help{ title: 'Serial help', data: { toggle: 'popover', content: serial_help_content } }
+                = f.text_field :serial_number, required: true, autocomplete: 'off', autocorrect: 'off', autocapitalize: 'off', placeholder: t('.highly_recommended'), class: 'form-control'
+                %a.inline-input-help{ title: t(".serial_help"), data: { toggle: 'popover', content: serial_help_content } }
                   ?
               #made-without-serial-input
                 %label
                   = f.check_box :made_without_serial
-                  This #{@bike.type} was made without a serial
+                  = t(".without_serial", bike_type: @bike.type)
               .below-input-help#made-without-serial-help
                 .hidden-other
                   %a{ data: { toggle: 'modal', target: '#made-without-serial-modal' } }
-                    This #{@bike.type} was made without a serial number
+                    = t(".without_serial_number", bike_type: @bike.type)
             .right-input-help
               %label.made-without-serial-checkbox
                 = check_box_tag :has_no_serial, true, @bike.serial_unknown?, tabindex: -1
-                Missing serial
+                = t(".missing_serial")
 
           .related-fields
             .form-group.row
               = f.label :manufacturer_id, class: 'form-well-label'
+
               .form-well-input
                 - initial = @bike.manufacturer && { id: @bike.manufacturer.id, text: @bike.manufacturer.name }.to_json
                 = f.text_field :manufacturer_id, value: @bike.manufacturer && @bike.manufacturer.name, class: 'form-control unfancy', data: { initial: initial }
                 %span.below-input-help
-                  Select 'Other' if manufacturer doesn't show up when entered
+                  = t(".select_other")
+
             .form-group.hidden-other.row
-              = f.label :manufacturer_other, 'Other manufacturer', class: 'form-well-label'
+              = f.label :manufacturer_other, t(".other_manufacturer"), class: 'form-well-label'
               .form-well-input
                 = f.text_field :manufacturer_other, class: 'form-control'
 
           .form-group.row.fancy-select.unfancy.unnested-field
-            = f.label :year, 'Model year', class: 'form-well-label'
+            = f.label :year, t(".model_year"), class: 'form-well-label'
             .form-well-input
               - years = (1900..Time.current.year+1).to_a.reverse.map { |i| [i,i] }
-              = f.select :year, years, prompt: "Unsure or unknown", selected: @bike.year || Time.current.year
+              = f.select :year, years, prompt: t(".unsure_or_unknown"), selected: @bike.year || Time.current.year
             .right-input-help
               %label
                 %input#bike_unknown_year{ type: 'checkbox', tabindex: -1 }
-                Unknown year
+                = t(".unknown_year")
 
           .form-group.row.unnested-field
             = f.label :frame_model, class: 'form-well-label'
@@ -71,95 +75,127 @@
               = f.text_field :frame_model, class: 'form-control'
 
           - classname = (@b_param.display_email? ? '' : 'no-divider-row')
-          = render partial: '/bikes/bike_fields/revised_colors', locals: { f: f, classname: classname }
+          = render partial: 'bikes/bike_fields/revised_colors', locals: { f: f, classname: classname }
 
           - if @bike.stolen || @organization&.include_field_reg_phone?(current_user)
-            - label_phone = @organization&.registration_field_label("reg_phone") || "Phone"
             .form-group.row.unnested-field
-              = f.label :phone, label_phone, class: "form-well-label"
+              = f.label :phone,
+                @organization&.registration_field_label("reg_phone") || t(".phone"),
+                class: "form-well-label"
               .form-well-input
                 = f.text_field :phone, required: true, value: current_user&.phone, class: "form-control"
 
           - if @bike.stolen
             = fields_for @stolen_record do |srecord|
-              = render partial: '/bikes/bike_fields/stolen_location', locals: { srecord: srecord }
+              = render partial: 'bikes/bike_fields/stolen_location', locals: { srecord: srecord }
 
           - if @organization&.include_field_reg_address?(current_user)
             .related-fields
               .form-group.row
-                - label_address = @organization.registration_field_label("reg_address") || "Mailing address"
-                / Set all the bike address attrs
-                - @bike.attributes = { address: @b_param.address("address"), address_city: @b_param.address("city"), address_zipcode: @b_param.address("zipcode"), address_state: @b_param.address("state") }
-                = f.label :address, label_address, class: 'form-well-label'
+                -# Set all the bike address attrs
+                - @bike.attributes = { address: @b_param.address("address"),
+                  address_city: @b_param.address("city"),
+                  address_zipcode: @b_param.address("zipcode"),
+                  address_state: @b_param.address("state") }
+
+                = f.label :address,
+                  @organization.registration_field_label("reg_address") || t(".mailing_address"),
+                  class: 'form-well-label'
+
                 .form-well-input
-                  = f.text_field :address, required: true, placeholder: "Street address", class: 'form-control'
+                  = f.text_field :address,
+                    required: true,
+                    placeholder: t(".street_address"),
+                    class: 'form-control'
+
                   %span.below-input-help
-                    Your full address is required by #{@organization.short_name}
+                    = t(".your_full_address_is_required", org_name: @organization.short_name)
+
               .form-group.row
                 %label.form-well-label
                 .form-well-input
-                  = f.text_field :address_city, required: true, placeholder: "City", class: "form-control"
+                  = f.text_field :address_city,
+                    required: true,
+                    placeholder: t(".city"),
+                    class: "form-control"
+
               .form-group.row
                 %label.form-well-label
                 .form-well-input
-                  = f.text_field :address_zipcode, required: true, placeholder: "Zipcode", class: "form-control"
+                  = f.text_field :address_zipcode,
+                    required: true,
+                    placeholder: t(".zipcode"),
+                    class: "form-control"
+
               .form-group.row.fancy-select-placeholder.unfancy
                 %label.form-well-label
                 .form-well-input
-                  = f.collection_select(:address_state, State.all, :abbreviation, :name, { include_blank: true, required: true, prompt: "State" }, { class: "form-control" })
+                  = f.collection_select(:address_state, State.all, :abbreviation, :name,
+                    { include_blank: true, required: true, prompt: t(".state") },
+                    { class: "form-control" })
 
           - if @organization&.include_field_reg_secondary_serial?(current_user)
-            - label_secondary_serial = @organization.registration_field_label("reg_secondary_serial") || "Additional serial/sticker number"
             .form-group.row.unnested-field.no-divider-row
-              = f.label :additional_registration, label_secondary_serial, class: "form-well-label"
+              = f.label :additional_registration,
+                @organization.registration_field_label("reg_secondary_serial") || t(".additional_serial_sticker_number"),
+                class: "form-well-label"
               .form-well-input
-                = f.text_field :additional_registration, autocomplete: "off", autocorrect: "off", autocapitalize: "off", class: "form-control"
+                = f.text_field :additional_registration,
+                  autocomplete: "off",
+                  autocorrect: "off",
+                  autocapitalize: "off",
+                  class: "form-control"
 
           - if @organization&.include_field_reg_affiliation?(current_user)
             .form-group.row.unnested-field.no-divider-row.fancy-select.unfancy
-              - label_affiliation = @organization.registration_field_label("reg_affiliation") || "#{@organization.short_name} affiliation"
-              = f.label :organization_affiliation, label_affiliation, class: "form-well-label"
+              = f.label :organization_affiliation,
+                @organization.registration_field_label("reg_affiliation") || t(".affiliation", org_name: @organization.short_name),
+                class: "form-well-label"
               .form-well-input
-                - affiliation_options = @organization.reg_affiliation_options.map { |a| [a.humanize, a] }
-                = f.select :organization_affiliation, affiliation_options, class: "form-control"
+                = f.select :organization_affiliation,
+                  @organization.reg_affiliation_options.map { |a| [a.humanize, a] },
+                  class: "form-control"
 
           .form-group.row.unnested-field.no-divider-row
             = f.label :owner_email, class: 'form-well-label'
             .form-well-input
-              - email = @bike.owner_email || current_user && current_user.email
-              = f.email_field :owner_email, value: email, required: true, placeholder: 'required', class: 'form-control'
+              = f.email_field :owner_email,
+                value: @bike.owner_email || current_user&.email,
+                required: true,
+                placeholder: 'required',
+                class: 'form-control'
+
       .new-bike-submit-wrapper
-        = submit_tag 'Register', class: 'btn btn-lg btn-primary'
+        = submit_tag t(".register"), class: 'btn btn-lg btn-primary'
 
 - modal_body = capture_haml do
   .modal-body
     %p
-      Very
-      %em
-        very
-      few bikes are made without serials. Unless this #{@bike.type}:
+      = t(".very_few_bikes_html", bike_type: @bike.type)
     %ul
       %li
-        Was made before 1970
+        = t(".was_made_before_1970")
       %li.li-or
-        \- or -
+        \-
+        = t(".or")
+        \-
       %li
-        Is a handmade frame
+        = t(".is_a_handmade_frame")
     %p
-      It probably has a serial number.
+      = t(".it_probably_has_a_serial_number")
     %p
-      Read about #{link_to 'how to find your serial number', serials_url, target: '_blank' }
-      %small
-        (opens in a separate window)
+      - how_to_find_link = link_to t('.how_to_find_serial'), serials_url, target: "_blank"
+      = t(".read_how_to_find_html", how_to_find_link: how_to_find_link)
+
   .modal-btn-footer
     .row
       .col-xs-6
         %button.btn.btn-secondary{'data-dismiss' => 'modal', type: 'button'}
-          Nevermind
-        I just don't know the serial
+          = t(".nevermind")
+        = t(".i_just_dont_know_the_serial")
       .col-xs-6
         %button.btn.btn-danger#made-without-serial-button{type: 'button'}
-          I'm 100% sure
-        This #{@bike.type} was made without a serial
+          = t(".im_100_sure")
+        = t(".without_serial", bike_type: @bike.type)
 
-= render partial: '/shared/modal', locals: { title: 'Are you certain?', id: 'made-without-serial-modal', modal_body: modal_body }
+= render partial: 'shared/modal', locals: { title: t('.are_you_certain'), id: 'made-without-serial-modal', modal_body: modal_body }
