--- a/app/views/bikes/pdf.html.haml
+++ b/app/views/bikes/pdf.html.haml
@@ -15,8 +15,6 @@
       - tit += "#{@bike.frame_model} by " if @bike.frame_model.present?
       = tit + @bike.mnfg_name
 
-
-
 %body
   %header
     - if @bike.manufacturer.logo && @bike.manufacturer.logo.url != "https://files.bikeindex.org/blank.png"
@@ -32,7 +30,7 @@
     %h1
       - if @bike.stolen
         %span.stolen-color
-          Stolen
+          = t(".stolen")
       = @bike.title
 
   - if @stolen_record.present?
@@ -40,19 +38,19 @@
       - if @stolen_record.theft_description.present?
         %p
           %em
-            Description of theft
+            = t(".description_of_theft")
           = @stolen_record.theft_description.truncate(300)
       .bike-details
         %table.table.table-striped
           %tbody
             %tr
               %td.td-title
-                Date Stolen
+                = t(".date_stolen")
               %td
-                = @stolen_record.date_stolen.strftime("%Y-%m-%d")
+                = @stolen_record.date_stolen.strftime("time.format.short_with_hour")
             %tr
               %td.td-title
-                Location
+                = t(".location")
               %td
                 = @stolen_record.address
 
@@ -62,27 +60,27 @@
             - if @stolen_record.phone.present?
               %tr
                 %td.td-title
-                  Owner phone
+                  = t(".owner_phone")
                 %td
-                  %a.phone-number-link{ href: "tell:#{@stolen_record.phone}" }
+                  %a.phone-number-link{ href: "tel:#{@stolen_record.phone}" }
                     = display_phone(@stolen_record.phone)
             - if @stolen_record.police_report_number.present?
               %tr
                 %td.td-title
-                  Police report
+                  = t(".police_report")
                 %td
                   = @stolen_record.police_report_number
             - if @stolen_record.police_report_department.present?
               %tr
                 %td.td-title
-                  Department
+                  = t(".department")
                 %td
                   = @stolen_record.police_report_department
   - if @bike.description.present?
     .description
       %p
         %em
-          Bike description:
+          = t(".bike_description")
         - if @bike.stolen
           = @bike.description.truncate(500)
         - else
@@ -93,69 +91,71 @@
         %tbody
           %tr
             %td.td-title
-              Registered
-            %td
-              = @bike.created_at.strftime("%Y-%m-%d")
-              to
+              = t(".registered")
+            %td.convertTime
+              = @bike.created_at.strftime("time.format.convert_time")
+              = t(".to")
               - if @bike.owner.present? && @bike.owner.name.present?
                 = @bike.owner.name
               - else
                 = @bike.owner_email
           %tr
             %td.td-title
-              Bike Serial
+              = t(".bike_serial")
             %td
               = @bike.serial_display
           %tr
             %td.td-title
-              Manufacturer
+              = t(".manufacturer")
             %td
               = @bike.mnfg_name
           - if @bike.frame_model.present?
             %tr
               %td.td-title
-                Model
+                = t(".model")
               %td
                 = @bike.frame_model
           - unless @bike.stolen and @stolen_record.present?
             - if @bike.frame_size.present?
               %tr
                 %td.td-title
-                  Frame size
+                  = t(".frame_size")
                 %td
                   = @bike.frame_size
           - if @bike.paint.present?
             %tr
               %td.td-title
-                Paint
+                = t(".paint")
               %td
                 = @bike.paint.name
           - else
             %tr
               %td.td-title
-                = 'Color'.pluralize(@bike.frame_colors.count)
+                = t(".color").pluralize(@bike.frame_colors.count)
               %td
                 = @bike.frame_colors.to_sentence
           - unless @bike.stolen and @stolen_record.present?
             - if @bike.front_gear_type.present?
               %tr
                 %td.td-title
-                  Front gears
+                  = t(".front_gears")
                 %td
                   = @bike.front_gear_type.name
             - if @bike.rear_gear_type.present?
               %tr
                 %td.td-title
-                  Rear gears
+                  = t(".rear_gears")
                 %td
                   = @bike.rear_gear_type.name
-                  = "with coaster brake" if @bike.coaster_brake
+                  = t(".with_coaster_brake") if @bike.coaster_brake
                   - if @bike.components.where(ctype_id: Ctype.find_by_name('hub').id).present?
                     - hubs = @bike.components.where(ctype_id: Ctype.find_by_name('hub').id)
                     - if hubs.where(rear: true)
                       - r_hub = hubs.where(rear: true).first
                       - if r_hub.present?
-                        (#{r_hub.cmodel_name} by #{r_hub.manufacturer_name})
+                        - model_name = r_hub.cmodel_name
+                        - mfg_name = r_hub.manufacturer_name
+                        = "(#{model_name} #{t('.by')} #{mfg_name})"
 
 
     .bike-details
@@ -164,34 +164,34 @@
           %tbody
             %tr
               %td.td-title
-                Front wheel
+                = t(".front_wheel")
               %td
                 = @bike.front_wheel_size.name if @bike.front_wheel_size.present?
-                with
+                = t(".with")
                 - if @bike.front_tire_narrow
-                  narrow tires
+                  = t(".narrow_tires")
                 - else
-                  wide tires
+                  = t(".wide_tires")
             - if @bike.rear_wheel_size.present?
               %tr
                 %td.td-title
-                  Rear wheel
+                  = t(".rear_wheel")
                 %td
                   = @bike.rear_wheel_size.name
-                  with
+                  = t(".with")
                   - if @bike.rear_tire_narrow
-                    narrow tires
+                    = t(".narrow_tires")
                   - else
-                    wide tires
+                    = t(".wide_tires")
             - if @bike.components.where(ctype_id: Ctype.find_by_name('saddle').id).present?
               %tr
                 %td.td-title
-                  Saddle
+                  = t(".saddle")
                 %td
                   - seat = @bike.components.where(ctype_id: Ctype.find_by_name('saddle').id).first
                   = seat.cmodel_name if seat.cmodel_name.present?
                   - if seat.manufacturer.present?
-                    by
+                    = t(".by")
                     = seat.manufacturer.name
                   = seat.description
 
@@ -201,10 +201,10 @@
           %img{ src: "https://files.bikeindex.org/logo.png" }
         .index-text
           %h2
-            Registration
+            = t(".registration")
           %h3
-            printout
+            = t(".printout")
           %p
-            online @
-            %a{href: bike_url(@bike) }
-              bikeindex.org#{bike_path(@bike)}
+            = t(".online")
+            @
+            = link_to t(".bikeindex_org", bike_path: bike_path(@bike)), bike_url(@bike)
