--- a/app/views/bikes/scanned.html.haml
+++ b/app/views/bikes/scanned.html.haml
@@ -1,45 +1,43 @@
 .container
   %h2
     = @bike_code.kind
-    %em
-      = @bike_code.code
-    isn't linked to a bike.
+    %em= @bike_code.code
+    = t(".isnt_linked_to_a_bike")
   %hr.mb-4.mb-4
 
   - if current_user.present?
     - if !@bike_code.claimable_by?(current_user)
-      %h3
-        You have claimed the maximum permitted number of Bike Codes.
+      %h3= t(".you_have_claimed_the_maximum_permitted")
       %p
-        Please email #{ link_to "support@bikeindex.org", "mailto:support@bikeindex.org" } if you don't understand why you're seeing this message or if you need an exception made.
+        - support_email = link_to "support@bikeindex.org", "mailto:support@bikeindex.org"
+        = t(".please_email_support_html", support_email_link: support_email)
     - else
       %p
-        You can enter the URL of the bike you would like to link this #{@bike_code.kind} to:
-      = form_tag bike_code_path(id: @bike_code.code, organization_id: @bike_code.organization_id), method: "PUT", class: "row" do
+        = t(".you_can_enter_the_url", bike_code_kind: @bike_code.kind)
+      = form_tag bike_code_path(id: @bike_code.code, organization_id: @bike_code.organization_id), method: :put, class: "row" do
         .col-sm-8.col-lg-10
           .form-group
-            = text_field_tag :bike_id, "", placeholder: "https://bikeindex.org/bikes/1234", class: "form-control"
+            = text_field_tag :bike_id, placeholder: "https://bikeindex.org/bikes/1234", class: "form-control"
         .col-sm-4.col-lg-2
-          = submit_tag "Update", class: "btn btn-success"
+          = submit_tag t(".update"), class: "btn btn-success"
 
       %p{ style: "margin-top: 24px;" }
-        Or, click <em>link it</em> on of your bikes to connect it to this #{@bike_code.kind}:
+        = t(".or_click_html", bike_code_kind: @bike_code.kind)
 
       %table.table.table-striped.table-bordered.table-sm.without-exterior-border
         %thead.small-header
           %tr
             %th.date-added
-              Added&nbsp;<small class="convertTimezone"></small>
-            %th.hidden-xs-down Manufacturer
-            %th.hidden-xs-down Model
-            %th.hidden-xs-down Color
+              = t(".added")
+              %small.convertTimezone
+            %th.hidden-xs-down= t(".manufacturer")
+            %th.hidden-xs-down= t(".model")
+            %th.hidden-xs-down= t(".color")
             %th.hidden-sm-up.hidden-sm-up
               %small
-                mnfg, model,
-                %span.less-strong
-                  color
+                = t(".mnfg_model_color_html")
             %th
-              Link&nbsp;IT!
+              = t(".link_it")
         %tbody
           - @bikes.each do |bike|
             %tr
@@ -55,16 +53,14 @@
                 = bike.frame_colors.to_sentence
               %td.hidden-sm-up
                 %small
-                  = bike.mnfg_name
-                  = ", #{bike.frame_model}" if bike.frame_model.present?
+                  = [t(".bikemnfg_name"), bike.frame_model].select(&:present?)..join(", ")
                   %span.less-strong
                     = bike.frame_colors.to_sentence
                   %br
               %td
                 %small
-                  = link_to bike_code_path(id: @bike_code.code, organization_id: @bike_code.organization_id, bike_id: bike.id), method: "PUT" do
-                    Link&nbsp;#{@bike_code.kind}
+                  = link_to t(".link_bike_codekind", bike_codekind: @bike_code.kind), bike_code_path(id: @bike_code.code, organization_id: @bike_code.organization_id, bike_id: bike.id), method: :put
   - else
     %p{ style: "margin-top: 24px;" }
-      To link that card with a bike,
-      = link_to "please sign in", new_session_url(return_to: "/bikes/#{@bike_code.code}/scanned?organization_id=#{@bike_code.organization_id}")
+      = t(".to_link_that_card_with_a_bike")
+      = link_to t(".please_sign_in"), new_session_url(return_to: scanned_bike(@bike_code.code, params: { organization_id: @bike_code.organization_id }))
