--- a/app/assets/stylesheets/revised/sections/legacy_content.scss
+++ b/app/assets/stylesheets/revised/sections/legacy_content.scss
@@ -113,3 +113,18 @@
     }
   }
 }
+
+.video-responsive {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  padding-top: 25px;
+  height: 0;
+  iframe {
+    border: 1px solid #ccc;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
