--- a/app/views/bikes/scanned.html.haml
+++ b/app/views/bikes/scanned.html.haml
@@ -53,7 +53,7 @@
                 = bike.frame_colors.to_sentence
               %td.hidden-sm-up
                 %small
-                  = [t(".bikemnfg_name"), bike.frame_model].select(&:present?)..join(", ")
+                  = [t(".bikemnfg_name"), bike.frame_model].select(&:present?).join(", ")
                   %span.less-strong
                     = bike.frame_colors.to_sentence
                   %br
